--- a/public/main.html
+++ b/public/main.html
@@ -11,8 +11,8 @@
  <body>
   <form method="post" name="form1" action="https://block.c4ei.net/addBlock">
 userID : <input type="text" name="userID" value="0x6856cADF4e3C5e0054Df82f13Dfc33A15aDE14b9" style="width:500px"><br/>
-referrer : <input type="text" name="referrer" value="his001" style="width:500px"><br/>
-uid : <input type="text" name="uid" id="uid" value="" style="width:500px"><a href="javascript:jsfn_genUuid();">genUuid</a>
+referrer : <input type="text" name="referrer" value="c4ei" style="width:500px"><br/>
+uid : <input type="text" name="uid" id="uid" value="" style="width:500px"> <a href="javascript:jsfn_genUuid();">new Uuid</a>
 <br/>
   <input type="submit" value="addBlock"><br/>
   </form>
